@@ -2,7 +2,7 @@
     "api_url"               : "/api/v1",
     "appcache"              : false,
     "minification" : {
-        "js"    : true,
+        "js"    : false,
         "css"   : true,
         "html"  : true,
         "img"   : true
