@@ -7,7 +7,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCmd;
 (function(Util, DOM){
     'use strict';
     
-    var Config, Modules, FileTemplate, PathTemplate;
+    var Config, Modules, FileTemplate, PathTemplate, Events = DOM.Events;
     
     /* Клиентский обьект, содержащий функциональную часть*/
     CloudCmd = {
@@ -59,7 +59,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCmd;
     };
     
     CloudCmd.GoogleAnalytics         = function(){
-       DOM.addOneTimeListener('mousemove', function(){
+       Events.addOneTime('mousemove', function(){
            var lUrl = CloudCmd.LIBDIRCLIENT + 'google_analytics.js';
             
             setTimeout(function(){
@@ -117,7 +117,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCmd;
                  * if user clicks somewhere keyBinded
                  * backs
                  */
-                DOM.addOneTimeListener('click', function(){
+                DOM.Events.addOneTime('click', function(){
                     //lA.contentEditable = false;
                     //KeyBinding && KeyBinding.set();
                 });
@@ -225,7 +225,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCmd;
         CloudCmd.getModules(function(pModules){
             pModules                = pModules || [];
             
-            DOM.addContextMenuListener(function(pEvent){
+            Events.addContextMenu(function(pEvent){
                 CloudCmd.Menu.ENABLED || DOM.preventDefault(pEvent);
             }, document);
             
@@ -287,9 +287,9 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCmd;
             var lButton         = 'f' + i,
                 lEl             = DOM.getById('f' + i);
             if( i === 3 || i === 4)
-                DOM.addOneTimeListener('click', lFuncs[i], lEl);
+                Events.addOneTime('click', lFuncs[i], lEl);
             else
-                DOM.addClickListener(lFuncs[i], lEl);
+                Events.addClick(lFuncs[i], lEl);
             lKeysPanel[lButton] = lEl;
         }
         
@@ -311,7 +311,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCmd;
         
         /* загружаем общие функции для клиента и сервера */
         DOM.jsload(CloudCmd.LIBDIR + 'cloudfunc.js', function(){
-            DOM.addListener("popstate", function(pEvent) {
+            Events.add("popstate", function(pEvent) {
                 var lPath   = pEvent.state + '?json';
                 
                 if(lPath)
@@ -414,7 +414,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCmd;
     CloudCmd._changeLinks            = function(pPanelID){
         /* назначаем кнопку очистить кэш и показываем её */
         var lClearcache = DOM.getById('clear-cache');
-            DOM.addClickListener(DOM.Cache.clear, lClearcache);
+            Events.addClick(DOM.Cache.clear, lClearcache);
             
         /* меняем ссылки на ajax-запросы */
         var lPanel  = DOM.getById(pPanelID),
@@ -495,7 +495,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCmd;
         };
         
         /* ставим загрузку гифа на клик*/
-        DOM.addClickListener( CloudCmd.refresh, a[0].parentElement );
+        Events.addClick( CloudCmd.refresh, a[0].parentElement );
         
         /* start from 1 cous 0 is a path and it's setted up */
         for(var i = 1, n = a.length; i < n ; i++){
@@ -509,20 +509,20 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCmd;
             
             /* if we in path - set click event */
             if (lLi.className === 'path')
-                DOM.addClickListener( lLoadDir, ai );
+                Events.addClick( lLoadDir, ai );
             else {
-                DOM.addClickListener( DOM.preventDefault, lLi);
-                DOM.addListener('mousedown', lSetCurrentFile_f, lLi);
-                DOM.addListener('dragstart', lOnDragStart_f, ai);
+                Events.addClick( DOM.preventDefault, lLi);
+                Events.add('mousedown', lSetCurrentFile_f, lLi);
+                Events.add('dragstart', lOnDragStart_f, ai);
                 /* if right button clicked menu will
                  * loads and shows
                  */
-                DOM.addListener('contextmenu', lOnContextMenu_f, lLi);
+                Events.add('contextmenu', lOnContextMenu_f, lLi);
                 
                 /* если ссылка на папку, а не файл */
                 if(ai.target !== '_blank'){
-                    DOM.addListener('dblclick', lLoadDirOnce, lLi);
-                    DOM.addListener('touchend', lLoadDirOnce, lLi);
+                    Events.add('dblclick', lLoadDirOnce, lLi);
+                    Events.add('touchend', lLoadDirOnce, lLi);
                 }
                 
                 lLi.id = (ai.title ? ai.title : ai.textContent) +
@@ -706,7 +706,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCmd;
         return Util.stringifyJSON(lFileTable);
     };
     
-    DOM.addOneTimeListener('load', function(){
+    Events.addOneTime('load', function(){
         /* базовая инициализация*/
         CloudCmd.init();
         
