@@ -5,7 +5,7 @@ var DOM, _gaq;
     /* setting google analitics tracking code */
     _gaq = [['_setAccount', 'UA-33536569-2'], ['_trackPageview']];
     
-    DOM.addErrorListener(function(msg, url, line) {
+    DOM.Events.addError(function(msg, url, line) {
         _gaq.push(['_trackEvent', 'JS Error', msg,
             navigator.userAgent + ' -> ' + url + " : " + line]);
     });
