@@ -345,7 +345,7 @@ var CloudCmd, Util, DOM;
         };
         
         /* добавляем обработчик клавишь */
-        DOM.addKeyListener(key_event);
+        DOM.Events.addKey(key_event);
         
         /* клавиши назначены*/
         Binded = true;
