@@ -19,6 +19,8 @@ dispatch
 
 * Fixed same background declartion a couple times.
 
+* Changed the way of work with listeners (DOM.addListener to DOM.Events.add).
+
 
 2012.04.22, v0.2.0
 
